Fixed issue where buttons couldn't be pressed due to negative z-index

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,9 +9,13 @@ h1, h2, h3, h4, h5, h6 {
     color: #292F36;
 }
 
-p, a, li, figcaption {
+p, li, figcaption {
     font-family: 'Raleway', sans-serif;
     color: #292F36;
+}
+
+a {
+    z-index:999;
 }
 
 .float-right {
@@ -283,7 +287,6 @@ header .jumbotron h1, header .jumbotron h2 {
     background-size: 60% auto;
     background-repeat: no-repeat;
     background-position: left bottom;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
 }
 
 
@@ -329,7 +332,7 @@ header .jumbotron h1, header .jumbotron h2 {
 .skills, #others {
     position: relative;
     background-color: #F1F6F4;
-    z-index: -10;
+    z-index: 1;
 }
 
 .skills ul {
@@ -355,9 +358,10 @@ header .jumbotron h1, header .jumbotron h2 {
     text-align: center;
 }
 
-#portfolio, #contact-me {
+#portfolio, #contact-me, #about-me {
     box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
-
+    position: relative;
+    z-index: 2;
 }
 
 #portfolio figure {
